# FlashcardPlus

./: .gitignore  README.md  pyproject.toml
cli/: load_data.py  start.py
src/adapters/db/: sqlite_adapters.py
src/adapters/ui/: tk_adapters.py
src/application/: db_service.py  flashcard_service.py
src/domains/: models.py  repositories.py
