[tool.poetry]
name = "flashcardplus"
version = "0.1.0"
description = "FlashcardPlus transforms your study routine! Effortlessly create and import flashcards with CSV files, easily integrate new data, and keep your study sets fresh. Ideal for students, professionals, and learners, it offers a sleek, intuitive interface with powerful features. Supercharge your learning now!"
authors = ["BKops <kahila.boulbaba.pro@gmail.com>"]
readme = "README.md"
packages = [
  {include = "*", from = "cli"},
  ]

[tool.poetry.dependencies]
python = "^3.11"
sqlmodel = "^0.0.21"
tk = "^0.1.0"
pydantic = "^2.8.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
ruff = "^0.5.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
load_data = "load_data:main"
start = "start:main"


[tool.ruff]
line-length = 119
target-version = "py311"

[tool.ruff.lint]
# Never enforce `E501` (line length violations).
ignore = ["C901", "E501", "E741", "F402", "F823" ]
select = ["C", "E", "F", "I", "W"]

# Ignore import violations in all `__init__.py` files.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["transformers"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
docstring-code-format = true

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false
